Fix messagebar appearance on IE

--- a/QWC2/ExtraComponents/components/style/MessageBar.css
+++ b/QWC2/ExtraComponents/components/style/MessageBar.css
@@ -9,18 +9,30 @@
 }
 
 #MessageBar div.messagebar {
-    display:inline-flex;
+    display: inline-block;
+    position: relative;
     max-width: 80%;
     pointer-events:all;
-    padding: 0 0.5em;
+    padding: 0 2.5em 0 0.5em;
     background-color: #fae3c4;
     border-radius: 0 0 4px 4px;
-    align-items: center;
     box-shadow: 0px 2px 4px rgba(136, 136, 136, 0.5);
 }
 
 #MessageBar span.messagebody {
-    flex: 1;
     padding: 0.5em;
     display: inline-block;
+}
+
+#MessageBar span.closewrapper {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    float: none;
+    padding: 0.5em 0.5em 0 0;
+}
+
+#MessageBar span.close {
+    float: none;
 }
